--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
         <div class="theme" id="dark"></div>
         <div class="theme" id="salmon"></div>
     </div>
+
+    <div class="videoEmbed">
+        <label for="inputVideoUrl">Insert YouTube URL</label>
+        <br>
+        <input type="text" id="inputVideoUrl">
+        <br>
+        <div id="video"></div>
+    </div>
     
     
 </body>
-<script src="index.js"></script>
+<script src="./index.js"></script>
 </html>
