05/09 end of lecture

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <div id="video"></div>
     </div>
     
+    <div id="quote">
+        Citation Test
+    </div>
     
 </body>
 <script src="./index.js"></script>
